# gaden_core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Journals.txt  Readme.md
cmake/: PythonBindings.cmake
example_project/environment_configurations/config1/: config.yaml
example_project/environment_configurations/config1/simulations/sim1/: sim.yaml
examples/example_project/environment_configurations/config1/simulations/sim1/: sim.yaml
examples/pythonAPI/: Readme.md  RunSimulation.py
examples/tutorial/: readme.md
examples/tutorial/diagrams/: PlaybackScene.drawio  PlaybackSimulation.drawio
include/gaden/: AirflowDisturbance.hpp  Environment.hpp  EnvironmentConfigMetadata.hpp  EnvironmentConfiguration.hpp  PlaybackScene.hpp  PlaybackSimulation.hpp  Preprocessing.hpp  Project.hpp  RunningSimulation.hpp  Scene.hpp  Simulation.hpp
include/gaden/core/: Assertions.hpp  GadenVersion.hpp  Logging.hpp  ReadResult.hpp  Utils.hpp  Vectors.hpp
include/gaden/datatypes/: Filament.hpp  GasTypes.hpp  LoopConfig.hpp  Model3D.hpp  SimulationMetadata.hpp
include/gaden/datatypes/sources/: BoxSource.hpp  GasSource.hpp  LineSource.hpp  PointSource.hpp  SphereSource.hpp
include/gaden/internal/: BufferUtils.hpp  MathUtils.hpp  PathUtils.hpp  Triangle.hpp  Utils.hpp  WindSequence.hpp  compression.hpp
src/: Environment.cpp  EnvironmentConfigMetadata.cpp  EnvironmentConfiguration.cpp  GasSource.cpp  PlaybackScene.cpp  PlaybackSimulation.cpp  Preprocessing.cpp  Project.cpp  RunningSimulation.cpp  Scene.cpp  Simulation.cpp  Sources.cpp  WindSequence.cpp  YAML_Conversions.hpp
src/preprocessing/: STL.hpp  TriangleBoxIntersection.hpp
utils/decompress/src/: comp.cpp
